* Fix reversed port assignments (FTP & SSH) in docker-compose.yml.
* Fix some issues found by test_code.py.
* Fix warning in _librsync.c module.
* Add encoding to logging.FileHandler call to make log file utf8.
* Ensure _librsync.so is regenned before tox testing.
* Adjust POTFILES.in for compilec.py move.
* Fix so we start duplicity with the base python we run under.
* Cleanup some trailing spaces/lines in Docker files.


New in v0.8.00 (2019/05/29)
---------------------------
* Merged in lp:~aaron-whitehouse/duplicity/remove-python6
  - Remove Python 2.6 support references and tests.
* Fixed bug #1600692 with patch from Wolfgang Rohdewald
  - allow symlink to have optional trailing slash during verify.
* Merged in lp:~aaron-whitehouse/duplicity/07-fix_deja_dup_error_on_locked_files
  - Revert log.Error to log.Warn, as it was prior to the merge in rev 1224,
    as this was affecting other applications (e.g. deja dup; Bug #1605939).
* Merged in lp:~mwilck/duplicity/duplicity
  - Speedup of path_matches_glob() by about 8x.  See
    https://code.launchpad.net/~mwilck/duplicity/duplicity/+merge/301268
    for more details.
* Fixed conflict in merge from Martin Wilck and applied
  - https://code.launchpad.net/~mwilck/duplicity/0.7-series/+merge/301492
  - merge fixes setsid usage in functional testing.
* Fixed bug #1612472 with patch from David Cuthbert
  - Restore from S3 fails with --with-prefix-archive if prefix includes '/'
* Merged in lp:~arashad.ahamad/duplicity/duplicity_latest
  - Changes for connecting to IBM Bluemix ObjectStorage.  See man page.
* Merged in lp:~fenisilius/duplicity/acd_init_mkdir
  - Allow duplicity to create remote folder
* Fixed bugs #815510 and #1615480
  - Changed default --volsize to 200MB
* Merged in lp:~mstoll-de/duplicity/duplicity
  - Backblaze announced a new domain for the b2 api
* Fixed bug #1623342 with patch from Daniel Jakots
  - failing test on OpenBSD because tar/gtar not found
* Merged in lp:~mwilck/duplicity/duplicity