@@ -89,9 +89,12 @@ class TestGlobToRegex(UnitTestCase):
                          u"[abc]el[^de][^fg]h")
 
         # see https://bugs.python.org/issue29995 for details
-        if sys.version_info[:2] >= (3, 6):
+        if sys.version_info[:2] == (3, 6):
             self.assertEqual(glob_to_regex(u"/usr/*/bin/"),
                              u"\\/usr\\/[^/]*\\/bin\\/")
+        elif sys.version_info[:2] == (3, 7):
+            self.assertEqual(glob_to_regex(u"/usr/*/bin/"),
+                             u"/usr/[^/]*/bin/")
         else:
             self.assertEqual(glob_to_regex(u"/usr/*/bin/"),
                              u"\/usr\/[^/]*\/bin\/")
